--- a/TRON/TRON.csproj
+++ b/TRON/TRON.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Texture.cs" />
+    <Compile Include="TopCamera.cs" />
     <Compile Include="TrailSector.cs" />
     <Compile Include="Window.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
